--- a/benchmarks/CommandLineTODOListCallbacks/app/tasks.json
+++ b/benchmarks/CommandLineTODOListCallbacks/app/tasks.json
@@ -1,1 +1,1 @@
-{"currId":3,"incompleteTasks":[{"id":1,"text":"Wake Up"},{"id":3,"text":"Goto Work"}],"completeTasks":[],"deleteTasks":[{"id":2,"text":"Exercise"}]}
+{"currId":5,"incompleteTasks":[],"completeTasks":[{"id":3,"text":"Get another life"},{"id":2,"text":"Get a life"},{"id":5,"text":"okay what now??"},{"id":4,"text":"okay what now?"}],"deleteTasks":[{"id":1,"text":"cando"}]}
