--- a/practice/nodeModules/package.json
+++ b/practice/nodeModules/package.json
@@ -1,18 +1,15 @@
 {
-  "name": "moviesearchcli",
+  "name": "nodemodules",
   "version": "1.0.0",
   "description": "",
-  "main": "app.js",
+  "main": "index.js",
   "scripts": {
-    "test": "mocha"
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
   "license": "ISC",
-  "devDependencies": {
+  "dependencies": {
     "chai": "^4.1.2",
     "mocha": "^3.5.0"
-  },
-  "dependencies": {
-    "cheerio": "^1.0.0-rc.2"
   }
 }
