Update packages and cleanups

--- a/benchmarks/MovieSearchCLI/package.json
+++ b/benchmarks/MovieSearchCLI/package.json
@@ -1,8 +1,8 @@
 {
   "name": "moviesearchcli",
   "version": "1.0.0",
-  "description": "",
-  "main": "app.js",
+  "description": "Scrapes IMDB movie search page",
+  "main": "app/movie-search",
   "scripts": {
     "test": "mocha"
   },
@@ -13,8 +13,6 @@
     "mocha": "^3.5.0"
   },
   "dependencies": {
-    "cheerio": "^1.0.0-rc.2",
-    "express": "^4.15.4",
-    "request": "^2.81.0"
+    "cheerio": "^1.0.0-rc.2"
   }
 }
