--- a/benchmarks/CommandLineTODOListPromises/package.json
+++ b/benchmarks/CommandLineTODOListPromises/package.json
@@ -12,7 +12,10 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "chai": "^4.1.1",
+    "pg": "^7.3.0"
+  },
+  "devDependencies": {
+    "chai": "^4.1.2",
     "mocha": "^3.5.0"
   }
 }
