--- a/benchmarks/CommandLineTODOListSQL/package.json
+++ b/benchmarks/CommandLineTODOListSQL/package.json
@@ -7,5 +7,12 @@
     "test": "mocha"
   },
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "pg": "^7.3.0"
+  },
+  "devDependencies": {
+    "chai": "^4.1.2",
+    "mocha": "^3.5.0"
+  }
 }
