--- a/benchmarks/CommandLineTODOListCallbacks/app/tasks.json
+++ b/benchmarks/CommandLineTODOListCallbacks/app/tasks.json
@@ -1,1 +1,1 @@
-{"currId":3,"incompleteTasks":[{"id":1,"text":"Wake Up"},{"id":3,"text":"Goto Work"}],"completeTasks":[],"deleteTasks":[{"id":2,"text":"Exercise"}]}
+{"currId":1,"incompleteTasks":[],"completeTasks":[{"id":1,"text":"Do Homework"}],"deleteTasks":[]}
