Add tictactoe using JS OOP

--- a/practice/MovieSearchAPIExpress/package.json
+++ b/practice/MovieSearchAPIExpress/package.json
@@ -1,16 +1,16 @@
 {
-  "name": "part-1",
+  "name": "moviesearchapiexpress",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "body-parser": "^1.18.1",
-    "express": "^4.15.4"
+    "ejs": "^2.5.7",
+    "express": "^4.15.4",
+    "request": "^2.81.0"
   }
 }
